@@ -52,6 +52,8 @@ Chronological list of authors
 2014
   - Matthieu Chavent
   - Joe Jordan
+2015
+  - Alex Nesterenko
 
 External code
 -------------
